# s2_project2

./: .gitignore  README.md  log.md  run.sh
cpp/: CMakeLists.txt
cpp/include/: preprocess.hpp  segmentation.hpp
cpp/src/: main.cpp  preprocess.cpp
cpp_impl/: CMakeLists.txt
cpp_impl/include/: calibration.hpp
cpp_impl/src/: calibration.cpp  main.cpp  segmentation.cpp
demonstration plots/: demonstration plots.md  make_demonstration_plots.py
python/: calibration.py  preprocess.py  segmentation.py
python_impl/: calibration.py  main.py  segmentation.py
results/: пояснительная записка.md
results/cpp/: calibration_params.txt  result.csv
results/cpp/debug/: lower_points.csv  rotation.txt  upper_points.csv
results/python/: calibration_params.txt  fhr_timeseries.csv  result.csv  result_sparse.csv  ua_timeseries.csv
results/python/debug/: lower_points.csv  lower_points_interpolated.csv  lower_points_raw.csv  upper_points.csv  upper_points_interpolated.csv  upper_points_raw.csv
